# DirtySocks

./: CMakeLists.txt  LICENSE  README.md
include/: ErrorCodes.hpp  IpAddress.hpp  IpVersion.hpp  Socket.hpp  SocketAddress.hpp  SocketSelector.hpp  System.hpp  TCPSocket.hpp  TcpListener.hpp  TcpSocket.hpp  enum_as_flags.hpp  platform_byteswap.hpp  platform_socket.hpp  platform_unicode.hpp
include/DirtySocks/: ErrorCodes.hpp  ErrorConditions.hpp  IoBuffer.hpp  IpVersion.hpp  PlatformSocket.hpp  Socket.hpp  SocketAddress.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp
src/: CMakeLists.txt  ErrorCodes.cpp  ErrorConditions.cpp  IpAddress.cpp  Socket.cpp  SocketAddress.cpp  SocketSelector.cpp  System.cpp  TcpListener.cpp  TcpSocket.cpp  main.cpp
